--- a/www/selectContacts.html
+++ b/www/selectContacts.html
@@ -184,7 +184,7 @@
 	    
     <div data-role="footer" data-theme="b" data-position="fixed" data-fullscreen="true">
         <a href="index.html" id="selectPicClip" name="selectPicClip">Back</a>
-        <a href="#" onclick="saveSelected()" id="submitPicClip" name="submitPicClip">Save</a>
+        <a style="float:right" href="#" onclick="saveSelected()" id="submitPicClip" name="submitPicClip">Save</a>
     </div>  <!-- end of contet -->	
 </div> <!-- mail page -->
 
