--- a/www/aboutMeDialog.html
+++ b/www/aboutMeDialog.html
@@ -19,10 +19,10 @@
            <td align="center"style="font:500 24px Verdana, Geneva, sans-serif; color:teal;">
            <center><img  height="75" src="images/tarry.jpg" border="0" class="homeLogo"></center>
        </td>
-        <tr><td>My name is Tarry Cutler and I wrote this using Cordova and jQuery Mobile. I hope you enjoy it!</td></tr>
 		<tr><td>&nbsp;</td></tr>
-		<tr><td>You can contact me at yellowrangler.me@gmail.com!</td></tr>
-        
+        <tr><td style="font:500 10px Verdana">My name is Tarry Cutler and I wrote this using Cordova and jQuery Mobile. I hope you enjoy it!</td></tr>
+		<tr><td>&nbsp;</td></tr>
+		<tr><td align="center" style="font:500 10px Verdana">You can contact me at <a href="mailto:yellowrangler.me@gmail.com?subject=ContactMe">yellowrangler.me@gmail.com!</td></tr>        
     </table>               
 	<input id="okButton" name="okButton" type="button" value="Ok" data-theme="e" onclick="changeToMainPage();" />     
     </div><!-- /content -->
